--- a/cliente.html
+++ b/cliente.html
@@ -18,10 +18,11 @@
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="mainMarco.css">
     <script src="assets/js/pruebas.js"></script>
+    <script src="bdOperations/funciones.js"></script>
 
 </head>
 <body>
-    <div class="container-fluid">
+    <div id="menu-cliente" class="container-fluid">
         <div class="row">
             <!-- Header/logo/navbar -->
           <div class="col-md-2 col-lg-2 col-xl-2">
@@ -36,9 +37,9 @@
                 </div>
                 <div class="header-menu">
                    <ul class="nav flex-column" >
-                        <li class="nav-item"><a href="index.html" class="nav-link bg-primary" aria-current="page">Menu</a></li>
-                        <li class="nav-item"><a href="apartados.html" class="nav-link">Apartados</a></li>
-                        <li class="btn-login-register nav-item"><button class="btn btn-primary"><p>Cerrar</p><p>session</p></button></li>
+                        <li class="nav-item"><a href="cliente.html" class="nav-link bg-primary" aria-current="page">Menu</a></li>
+                        <li class="nav-item"><a href="apartados-cliente.html" class="nav-link">Apartados</a></li>
+                        <li class="btn-login-register nav-item"><button class="btn btn-primary"><p>Cerrar</p><p>sesión</p></button></li>
                    </ul>
                     
                 </div>   
@@ -90,7 +91,7 @@
                                           <img src="assets/images/Comidas/carneEnSuJugo.jpg" alt="">
                                         </div>
                                         <div class="dish-title">
-                                          <h3 class="h3-title">Carne en su jugo</h3>
+                                          <h3 class="h3-title">Pozole</h3>
                                         </div>
                                         <div class="dist-bottom-row">
                                           <!-- <ul> -->
@@ -98,7 +99,7 @@
                                               <!-- <b>$ 75</b> -->
                                             <!-- </li> -->
                                             <!-- <li> -->
-                                              <button class="dish-add-btn" onclick="agregarComida()">
+                                              <button class="dish-add-btn" onclick="agregarComida('Pozole')">
                                                 <i class="uil uil-plus"></i>
                                               </button>
                                             <!-- </li> -->
@@ -114,7 +115,7 @@
                                           <img src="assets/images/Comidas/carneEnSuJugo.jpg" alt="">
                                         </div>
                                         <div class="dish-title">
-                                          <h3 class="h3-title">Carne en su jugo</h3>
+                                          <h3 class="h3-title">Cabeza</h3>
                                         </div>
                                         <div class="dist-bottom-row">
                                           <!-- <ul> -->
@@ -122,7 +123,7 @@
                                               <!-- <b>$ 75</b> -->
                                             <!-- </li> -->
                                             <!-- <li> -->
-                                              <button class="dish-add-btn" onclick="agregarComida()">
+                                              <button class="dish-add-btn" onclick="agregarComida('Cabeza')">
                                                 <i class="uil uil-plus"></i>
                                               </button>
                                             <!-- </li> -->
@@ -138,7 +139,7 @@
                                           <img src="assets/images/Comidas/carneEnSuJugo.jpg" alt="">
                                         </div>
                                         <div class="dish-title">
-                                          <h3 class="h3-title">Carne en su jugo</h3>
+                                          <h3 class="h3-title">Pierna</h3>
                                         </div>
                                         <div class="dist-bottom-row">
                                           <!-- <ul> -->
@@ -146,7 +147,7 @@
                                               <!-- <b>$ 75</b> -->
                                             <!-- </li> -->
                                             <!-- <li> -->
-                                              <button class="dish-add-btn" onclick="agregarComida()">
+                                              <button class="dish-add-btn" onclick="agregarComida('Pierna')">
                                                 <i class="uil uil-plus"></i>
                                               </button>
                                             <!-- </li> -->
@@ -170,7 +171,7 @@
                                               <!-- <b>$ 75</b> -->
                                             <!-- </li> -->
                                             <!-- <li> -->
-                                              <button class="dish-add-btn" onclick="agregarComida()">
+                                              <button class="dish-add-btn" onclick="agregarComida('Carne en su jugo')">
                                                 <i class="uil uil-plus"></i>
                                               </button>
                                             <!-- </li> -->
@@ -186,7 +187,7 @@
                                           <img src="assets/images/Comidas/carneEnSuJugo.jpg" alt="">
                                         </div>
                                         <div class="dish-title">
-                                          <h3 class="h3-title">Carne en su jugo</h3>
+                                          <h3 class="h3-title">Spaghetti</h3>
                                         </div>
                                         <div class="dist-bottom-row">
                                           <!-- <ul> -->
@@ -194,7 +195,7 @@
                                               <!-- <b>$ 75</b> -->
                                             <!-- </li> -->
                                             <!-- <li> -->
-                                              <button class="dish-add-btn" onclick="agregarComida()">
+                                              <button class="dish-add-btn" onclick="agregarComida('Spaghetti')">
                                                 <i class="uil uil-plus"></i>
                                               </button>
                                             <!-- </li> -->
@@ -210,7 +211,7 @@
                                           <img src="assets/images/Comidas/carneEnSuJugo.jpg" alt="">
                                         </div>
                                         <div class="dish-title">
-                                          <h3 class="h3-title">Carne en su jugo</h3>
+                                          <h3 class="h3-title">Albóndigas</h3>
                                         </div>
                                         <div class="dist-bottom-row">
                                           <!-- <ul> -->
@@ -218,7 +219,7 @@
                                               <!-- <b>$ 75</b> -->
                                             <!-- </li> -->
                                             <!-- <li> -->
-                                              <button class="dish-add-btn" onclick="agregarComida()">
+                                              <button class="dish-add-btn" onclick="agregarComida('Albóndigas')">
                                                 <i class="uil uil-plus"></i>
                                               </button>
                                             <!-- </li> -->
@@ -1091,7 +1092,7 @@
                             <label class="form-check-label" for="flexSwitchCheckDefault">Este pedido será para llevar</label>
                           </div>
                           <!-- SELECT PARA LA HORA -->
-                          <select class="form-select">
+                          <select id="horaApartado" class="form-select">
                             <option selected>Hora</option>
                             <option value="1">12:00 PM</option>
                             <option value="2">12:30 PM</option>
@@ -1103,7 +1104,7 @@
                           </select>                  
                         </div>
                         <div class="modal-footer">
-                          <button type="button" class="btn btn-primary">Guardar</button>
+                          <button id="guardarApartado" type="button" class="btn btn-primary">Guardar</button>
                           <button type="button" onclick="closeModal()" class="btn btn-secondary" data-dismiss="modal">Close</button>
                         </div>
                       </div>
@@ -1127,4 +1128,5 @@
       <script src="assets/js/jquery-3.5.1.min.js"></script>
       <script src="assets/js/popper.min.js"></script>
       <script src="assets/js/bootstrap.min.js"></script>
+      <script src="bdOperations/guardar.js"></script>
 </html>
