--- a/apartados-cliente.html
+++ b/apartados-cliente.html
@@ -70,7 +70,14 @@
 
       <script>
         let fullCookie = document.cookie.split("=");
-        filtrarApartados(fullCookie[2]);
+
+        if (fullCookie[1] === "Doña Magui") {
+          alert("Error al acceder a la página, será enviado de vuelta a la página de inicio");
+          document.cookie = "nombreCompleto=; expires=Thu, 01 Jan 1970 00:00:00 UTC"; // borra la cookie
+          window.location.replace("index.html");
+        }
+
+        filtrarApartados(fullCookie[1]);
       </script>
 
       <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
