--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
             </div>
         </div>
     </main>
+    <script>
+        document.cookie = "nombreCompleto=; expires=Thu, 01 Jan 1970 00:00:00 UTC";
+    </script>
     <script src="assets/js/script-login.js"></script>
     <script src="bdOperations/logIn.js"></script>
 </body>
