--- a/apartados.html
+++ b/apartados.html
@@ -78,6 +78,14 @@
       </div>
 
       <script>
+        let fullCookie = document.cookie.split("=");
+        
+        if (fullCookie[1] !== "Doña Magui") {
+          alert("Error al acceder a la página, será enviado de vuelta a la página de inicio");
+          document.cookie = "nombreCompleto=; expires=Thu, 01 Jan 1970 00:00:00 UTC"; // borra la cookie
+          window.location.replace("index.html");
+        }
+
         obtenerApartados();
       </script>
 
