--- a/cliente.html
+++ b/cliente.html
@@ -1129,4 +1129,13 @@
       <script src="assets/js/popper.min.js"></script>
       <script src="assets/js/bootstrap.min.js"></script>
       <script src="bdOperations/guardar.js"></script>
+      <script>
+        let fullCookie = document.cookie.split("=");
+        
+        if (fullCookie[1] === "Doña Magui") {
+          alert("Error al acceder a la página, será enviado de vuelta a la página de inicio");
+          document.cookie = "nombreCompleto=; expires=Thu, 01 Jan 1970 00:00:00 UTC"; // borra la cookie
+          window.location.replace("index.html");
+        }
+      </script>
 </html>
