--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
     </main>
     <script>
-        document.cookie = "nombreCompleto=; expires=Thu, 01 Jan 1970 00:00:00 UTC";
+        deleteAllCookies();
     </script>
     <script src="assets/js/script-login.js"></script>
     <script src="bdOperations/logIn.js"></script>
